--- a/index.html
+++ b/index.html
@@ -1,232 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>Work Duration / Time Interval Calculator</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <title>Work Duration Calculator</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 40px; background: #f7fafc; color: #111; }
-    h1 { margin-bottom: 6px; }
-    textarea { width: 100%; height: 160px; padding: 10px; font-size: 14px; border-radius: 6px; border: 1px solid #ccd6dd; resize: vertical; }
-    .controls { margin-top: 10px; display:flex; gap: 8px; flex-wrap:wrap; align-items:center; }
-    .controls button, .controls .mode { padding:8px 12px; border-radius:6px; border:1px solid #cbd5e1; background:#fff; cursor:pointer; }
-    .note { margin-top: 8px; color:#555; font-size:13px; }
-    .result-box { margin-top: 14px; padding: 12px; background:#fff; border:1px solid #e2e8f0; border-radius:8px; }
-    .result-line { display:flex; align-items:center; gap:10px; margin-bottom:8px; }
-    .result-value { font-weight:600; font-size:18px; user-select:text; cursor:pointer; }
-    .minutes-value { font-size:14px; color:#444; user-select:text; cursor:pointer; }
+    body { font-family: Arial, sans-serif; margin: 2rem; }
+    textarea { width: 100%; height: 150px; font-size: 1rem; }
+    .result { margin-top: 1rem; font-size: 1.2rem; font-weight: bold; }
+    button { margin-top: 0.5rem; padding: 0.5rem 1rem; cursor: pointer; }
+    .tests { margin-top: 1rem; padding: 1rem; background: #f9f9f9; border-radius: 6px; }
+    .pass { color: green; font-weight: bold; }
+    .fail { color: red; font-weight: bold; }
   </style>
 </head>
 <body>
-  <h1>Work Duration / Time Interval Calculator ⏱️</h1>
-  <p>Enter one item per line. Lines can be durations (e.g. <code>1:30</code>, <code>0:45:20</code>, <code>90</code>) or time ranges (e.g. <code>10:00 - 10:20</code>). Plain numbers interpreted per mode.</p>
-
-  <textarea id="timeInput" placeholder="Examples:
-10:00 - 10:20
-10:40 - 10:50
-11:00 - 13:00
+  <h1>Work Duration Calculator ⏱️</h1>
+  <p>Enter time intervals or durations (e.g. <code>10:00 - 11:30</code> or <code>1:30</code>):</p>
+  <textarea id="inputArea" placeholder="Examples:
+10:00 - 11:30
+12:00 - 14:50
+16:00 - 22:00
 1:30
 90"></textarea>
+  <div class="result">Total: <span id="output">00:00:00</span></div>
+  <button onclick="copyResult()">Copy</button>
 
-  <div class="controls">
-    <div>
-      <label><input type="radio" name="numMode" value="minutes" checked> Plain numbers = minutes</label>
-      &nbsp;
-      <label><input type="radio" name="numMode" value="seconds"> Plain numbers = seconds</label>
-    </div>
-    <button id="pasteBtn">Paste from Clipboard</button>
-    <button id="clearBtn">Clear</button>
-    <button id="copyBtn">Copy Result</button>
-  </div>
-
-  <div class="note">Range format supports `-` (dash). If end < start, it assumes next day (cross-midnight).</div>
-
-  <div class="result-box">
-    <div class="result-line">
-      <div><strong>Total Time:</strong></div>
-      <div id="totalTime" class="result-value">--:--:--</div>
-    </div>
-    <div class="result-line">
-      <div><strong>Total Minutes:</strong></div>
-      <div id="totalMinutes" class="minutes-value">--</div>
-    </div>
-  </div>
+  <h2>✅ Test Results</h2>
+  <button onclick="runTests()">Run Tests</button>
+  <div id="testResults" class="tests"></div>
 
   <script>
-    // --- Parsing utilities ---
-    const DAY_SECONDS = 24 * 3600;
-
-    // Parse a time-of-day like "10:00", "10:00:30", "10:00 am", "12:30 PM", "7"
-    function parseTimeOfDay(str) {
-      if (!str) return null;
-      let s = String(str).trim();
-      if (!s) return null;
-      const ampmMatch = s.match(/\\b(am|pm)\\b/i);
-      let ampm = null;
-      if (ampmMatch) {
-        ampm = ampmMatch[1].toLowerCase();
-        s = s.replace(/\\b(am|pm)\\b/i, '').trim();
+    function parseTime(str) {
+      const parts = str.split(":").map(p => parseInt(p, 10));
+      if (parts.length === 2) {
+        return parts[0] * 3600 + parts[1] * 60;
+      } else if (parts.length === 3) {
+        return parts[0] * 3600 + parts[1] * 60 + parts[2];
+      } else if (!isNaN(str)) {
+        return parseInt(str, 10) * 60; // raw number = minutes
       }
-      const parts = s.split(':').map(p => p.trim()).filter(p => p !== '');
-      if (parts.length < 1 || parts.length > 3) return null;
-      const nums = parts.map(n => Number(n));
-      if (nums.some(n => !Number.isFinite(n))) return null;
-      let h=0,m=0,sec=0;
-      if (nums.length === 1) { h = nums[0]; }
-      else if (nums.length === 2) { h = nums[0]; m = nums[1]; }
-      else { h = nums[0]; m = nums[1]; sec = nums[2]; }
-      if (h < 0 || m < 0 || sec < 0 || m >= 60 || sec >= 60) return null;
-      if (ampm) {
-        if (ampm === 'am') {
-          if (h === 12) h = 0;
-        } else { // pm
-          if (h < 12) h += 12;
-        }
-      }
-      return h * 3600 + m * 60 + sec;
+      return 0;
     }
 
-    // Parse a duration line (not a range). Returns seconds or null.
-    // Accepts "H:MM", "H:MM:SS", or plain numbers (minutes/seconds).
-    function parseDurationLine(str, numberMode) {
-      if (!str) return null;
-      const s = String(str).trim();
-      if (!s) return null;
-      if (s.includes(':')) {
-        const parts = s.split(':').map(p => Number(p.trim()));
-        if (parts.some(n => !Number.isFinite(n))) return null;
-        if (parts.length === 2) {
-          return parts[0] * 3600 + parts[1] * 60;
-        } else if (parts.length === 3) {
-          return parts[0] * 3600 + parts[1] * 60 + parts[2];
+    function formatDuration(seconds) {
+      const h = Math.floor(seconds / 3600);
+      const m = Math.floor((seconds % 3600) / 60);
+      const s = seconds % 60;
+      return `${String(h).padStart(2, "0")}:${String(m).padStart(2, "0")}:${String(s).padStart(2, "0")}`;
+    }
+
+    function calculate() {
+      const lines = document.getElementById("inputArea").value.split("\n");
+      let totalSeconds = 0;
+
+      lines.forEach(line => {
+        const trimmed = line.trim();
+        if (!trimmed) return;
+
+        if (trimmed.includes("-")) {
+          const [start, end] = trimmed.split("-").map(t => t.trim());
+          const startSec = parseTime(start);
+          const endSec = parseTime(end);
+          if (endSec > startSec) {
+            totalSeconds += (endSec - startSec);
+          }
         } else {
-          return null;
+          totalSeconds += parseTime(trimmed);
         }
-      } else {
-        // plain number
-        const num = parseInt(s, 10);
-        if (isNaN(num)) return null;
-        return numberMode === 'minutes' ? num * 60 : num;
-      }
+      });
+
+      document.getElementById("output").innerText = formatDuration(totalSeconds);
     }
 
-    // Parse a single input line: detects ranges (start - end) or durations.
-    function parseLineToSeconds(line, numberMode) {
-      if (!line) return 0;
-      const raw = String(line).trim();
-      if (!raw) return 0;
-
-      // If contains a dash, treat as range: start - end
-      if (raw.match(/[-–—]/)) {
-        // split on the first dash, but allow multiple dashes in case (compose rest)
-        const parts = raw.split(/[-–—]/);
-        const startStr = (parts[0] || '').trim();
-        const endStr = parts.slice(1).join('-').trim(); // join rest in case extra dashes
-        const startSec = parseTimeOfDay(startStr);
-        const endSec = parseTimeOfDay(endStr);
-        if (startSec == null || endSec == null) return 0;
-        let diff = endSec - startSec;
-        if (diff < 0) diff += DAY_SECONDS; // cross midnight
-        return diff;
-      }
-
-      // Otherwise, treat as a duration input
-      const dur = parseDurationLine(raw, numberMode);
-      return dur || 0;
+    function copyResult() {
+      const text = document.getElementById("output").innerText;
+      navigator.clipboard.writeText(text);
+      alert("Copied: " + text);
     }
 
-    // --- UI wiring ---
-    const timeInput = document.getElementById('timeInput');
-    const totalTimeEl = document.getElementById('totalTime');
-    const totalMinutesEl = document.getElementById('totalMinutes');
-    const pasteBtn = document.getElementById('pasteBtn');
-    const clearBtn = document.getElementById('clearBtn');
-    const copyBtn = document.getElementById('copyBtn');
-    const numModeRadios = document.getElementsByName('numMode');
+    document.getElementById("inputArea").addEventListener("input", calculate);
 
-    function getNumberMode() {
-      return Array.from(numModeRadios).find(r => r.checked).value;
+    // -------------------
+    // ✅ Unit Tests
+    // -------------------
+    function runTests() {
+      const tests = [
+        { input: ["10:00 - 11:30"], expected: "01:30:00" },
+        { input: ["10:00 - 11:30", "12:00 - 14:50", "16:00 - 22:00"], expected: "10:20:00" },
+        { input: ["1:30"], expected: "01:30:00" },
+        { input: ["90"], expected: "01:30:00" },
+        { input: ["0:45:20"], expected: "00:45:20" },
+        { input: ["3600"], expected: "60:00:00" }
+      ];
+
+      let output = "";
+      tests.forEach((test, i) => {
+        let totalSeconds = 0;
+        test.input.forEach(line => {
+          if (line.includes("-")) {
+            const [start, end] = line.split("-").map(t => t.trim());
+            totalSeconds += parseTime(end) - parseTime(start);
+          } else {
+            totalSeconds += parseTime(line);
+          }
+        });
+        const result = formatDuration(totalSeconds);
+        const pass = result === test.expected;
+        output += `<div class="${pass ? 'pass' : 'fail'}">Test ${i + 1}: ${pass ? "✅ PASS" : "❌ FAIL"}<br>
+        Input: ${test.input.join(", ")}<br>
+        Expected: ${test.expected}<br>
+        Got: ${result}</div><br>`;
+      });
+
+      document.getElementById("testResults").innerHTML = output;
     }
 
-    function formatHMS(totalSeconds) {
-      if (!Number.isFinite(totalSeconds) || totalSeconds <= 0) return '--:--:--';
-      const h = Math.floor(totalSeconds / 3600);
-      const m = Math.floor((totalSeconds % 3600) / 60);
-      const s = totalSeconds % 60;
-      return [h,m,s].map(v => String(v).padStart(2,'0')).join(':');
-    }
-
-    function recalcAndRender() {
-      const lines = timeInput.value.split(/\\n/);
-      const mode = getNumberMode();
-      let total = 0;
-      for (const line of lines) {
-        try {
-          total += parseLineToSeconds(line, mode);
-        } catch (e) {
-          // safety: ignore line on error
-        }
-      }
-      if (total === 0) {
-        totalTimeEl.textContent = '--:--:--';
-        totalMinutesEl.textContent = '--';
-      } else {
-        totalTimeEl.textContent = formatHMS(total);
-        totalMinutesEl.textContent = String(Math.floor(total / 60));
-      }
-    }
-
-    // Buttons
-    pasteBtn.addEventListener('click', async () => {
-      try {
-        const txt = await navigator.clipboard.readText();
-        timeInput.value = txt;
-        recalcAndRender();
-      } catch (e) {
-        alert('Failed to read clipboard.');
-      }
-    });
-
-    clearBtn.addEventListener('click', () => {
-      timeInput.value = '';
-      recalcAndRender();
-    });
-
-    copyBtn.addEventListener('click', async () => {
-      const text = totalTimeEl.textContent;
-      if (!text || text === '--:--:--') return;
-      try {
-        await navigator.clipboard.writeText(text);
-        // small visual feedback
-        copyBtn.textContent = 'Copied!';
-        setTimeout(() => copyBtn.textContent = 'Copy Result', 1200);
-      } catch (e) {
-        alert('Copy failed.');
-      }
-    });
-
-    // auto-select on click for quick manual copy
-    totalTimeEl.addEventListener('click', () => {
-      const r = document.createRange();
-      r.selectNodeContents(totalTimeEl);
-      const sel = window.getSelection();
-      sel.removeAllRanges();
-      sel.addRange(r);
-    });
-    totalMinutesEl.addEventListener('click', () => {
-      const r = document.createRange();
-      r.selectNodeContents(totalMinutesEl);
-      const sel = window.getSelection();
-      sel.removeAllRanges();
-      sel.addRange(r);
-    });
-
-    // recalc on input or mode change
-    timeInput.addEventListener('input', recalcAndRender);
-    Array.from(numModeRadios).forEach(r => r.addEventListener('change', recalcAndRender));
-
-    // initial render
-    recalcAndRender();
+    runTests();
   </script>
 </body>
 </html>
