--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
   <title>Work Duration Calculator</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 2rem; }
-    textarea { width: 100%; height: 150px; font-size: 1rem; }
+    textarea { 
+      width: 100%; 
+      min-height: 150px; 
+      resize: vertical; 
+      font-size: 1rem; 
+      padding: 0.5rem;
+      line-height: 1.4;
+      box-sizing: border-box;
+    }
     .result { margin-top: 1rem; font-size: 1.2rem; font-weight: bold; }
     button { margin-top: 0.5rem; padding: 0.5rem 1rem; cursor: pointer; }
     .tabs { margin-top: 1.5rem; }
@@ -55,6 +63,7 @@
 90"></textarea>
       <div class="result">Total: <span id="output">00:00:00</span></div>
       <button onclick="copyResult()">Copy</button>
+      <button onclick="clearInput()">Clear</button>
     </div>
 
     <!-- Tests Tab -->
@@ -114,7 +123,21 @@
       alert("Copied: " + text);
     }
 
-    document.getElementById("inputArea").addEventListener("input", calculate);
+    function clearInput() {
+      document.getElementById("inputArea").value = "";
+      document.getElementById("output").innerText = "00:00:00";
+    }
+
+    // Auto-resize textarea
+    function autoResize(el) {
+      el.style.height = "auto";
+      el.style.height = (el.scrollHeight) + "px";
+    }
+
+    document.getElementById("inputArea").addEventListener("input", function() {
+      calculate();
+      autoResize(this);
+    });
 
     // Tests
     function runTests() {
